[HIK-5] Add missing logic to authentication filter & refactor